Release 1.4 (dev)
-----------------
* fixes :issue:`80`. (thanks Naddiseo for the useful support)
* Django 1.11 compatibility
* some minor support for Django 2.0


Release 1.3.2 (10 Sep 2016)
---------------------------
* fixes bug in ConditionalVersionField that produced 'maximum recursion error' when a model had a ManyToManyField with a field to same model (self-relation)


Release 1.3.1 (15 Jul 2016)
---------------------------
* just packaging


Release 1.3 (15 Jul 2016)
-------------------------
* drop support for Python < 3.3
* add support Django>=1.10
* change license
* fixes :issue:`36`. (thanks claytondaley)
* new :setting:`IGNORE_DEFAULT` to ignore default version number


Release 1.2 (05 Apr 2016)
-------------------------
* better support for django 1.9 ( ``TemplateDoesNotExist`` is now in ``django.template.exceptions``
* improved eror message in ``ConcurrencyListEditableMixin`` :issue:`63` :issue:`64`
* fixes :issue:`61`. Error in ``ConditionalVersionField`` (thanks ticosax)
* fixes ``skipif`` test in pypy


Release 1.1 (13 Feb 2016)
-------------------------
* drop support for django<1.7
* add support for pypy
* new :class:`concurrency.fields.ConditionalVersionField`
* new decorator :class:`concurrency.api.concurrency_disable_increment`
* :class:`concurrency.api.disable_concurrency` is now a noop if applied to a model not under concurrency management


Release 1.0.1
-------------
* fixes :issue:`56` "Can't upgrade django-concurrency to 1.0" (thanks oppianmatt).


Release 1.0
-----------
* **BACKWARD INCOMPATIBLE**:: dropped support for Django prior 1.6
* code clean
* fixes :issue:`54` "Incorrect default for IntegerVersionField" (thanks vmspike).
* fixes :issue:`53`. updates Documentation
* :ref:`disable_concurrency` can now disable concurrency in any model
* :ref:`disable_concurrency` is now also a decorator
* **BACKWARD INCOMPATIBLE**:: removed custom backends. ``TriggerVerionField`` can be used with standard Django